<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Core -->
    <string name="app_name">Clinical Informatics</string>
    <string name="action_settings">Show Audit</string>
    
    <!-- Header -->
    <string name="database">Database</string>
	<string name="table">Table</string>
    <string name="field">Field</string>

    <!-- Buttons -->
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="view">View</string>
    <string name="delete">Delete</string>
    
    <!-- Dialogs -->
    <string name="delete_question">Do you want to delete?</string>
    <string name="accept">Accept</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="add_name">Add Name</string>
    <string name="add_type">Add Type</string>
    
    <string name="success">The transaction is success, check the auditTrail table in the Menu Settings</string>
    <string name="error">The transaction has ended with error, please check your values and try again</string>
    <!-- Array for Input Type -->
    <string-array name="type_array">
		<item>INTEGER</item>
		<item>REAL</item>
		<item>TEXT</item>
    </string-array>
</resources>
