<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="1" >

        <Button
            android:id="@+id/btnAdd"
            style="@style/ButtonAppTheme"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight=".25"
            android:text="@string/add" />

        <Button
            android:id="@+id/btnEdit"
            style="@style/ButtonAppTheme"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight=".25"
            android:text="@string/edit" />

        <Button
            android:id="@+id/btnDelete"
            style="@style/ButtonAppTheme"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight=".25"
            android:text="@string/delete" />

        <Button
            android:id="@+id/btnCancel"
            style="@style/ButtonAppTheme"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight=".25"
            android:text="@string/cancel" />
    </LinearLayout>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/buttonsLayout" >

        <ListView
            android:id="@android:id/list"
            android:layout_width="wrap_content"
            android:minWidth="48dp"
            android:layout_height="match_parent" >
        </ListView>
    </HorizontalScrollView>

</RelativeLayout>